﻿i-MSCP ChangeLog

------------------------------------------------------------------------------------------------------------------------
Git 1.1.x
------------------------------------------------------------------------------------------------------------------------

CONFIGS:
	Fixed: ssl_protocols parameter not available in versions older than < 2.1 ( Dovecot )

GUI:
	Fixed: PHP must search files in i-MSCP library directories prior any other directory ( PHP include_path )
	Removed: Useless encoding translation string ( Usage of UTF-8 only )

INSTALLER
	Fixed: The languages index must be rebuilt on each update to show the last available translation statistics
	Fixed: Unable to handle i-MSCP services (start/restart/stop...) on systems using systemd (e.g Jessie)
	Fixed: Wrong labels ( iMSCP::Dialog )
	Removed: Option allowing to add IP manually ( Tedious and error prone )

------------------------------------------------------------------------------------------------------------------------
1.1.15
------------------------------------------------------------------------------------------------------------------------

2014-10-29: Laurent Declercq
	RELEASE i-MSCP 1.1.15

CONFIGS
	Added: cram-md5 authentication mechanism (Dovecot)
	Added: PLUGINS_DIR configuration parameter in imscp.conf file
	Changed: Lowered log level for TLS (Postfix)
	Fixed: Apache user (www-data) must not be able to access to the entire file system (security)
	Fixed: Symlinks must be followed by Apache only if the owner match with the target owner (security)
	Fixed: SSLv2 and SSLv3 must be disabled to prevent POODLE attacks ( Dovecot )
	Fixed: Virtual mail directory must not be hardcoded in dovecot configuration file

ENGINE
	Added: Support for alternative cron files ( Servers::cron::cron )
	Changed: Ignore errors regarding the move of home directory ( Modules::User )
	Fixed: main::run: Argument "yes" isn't numeric in addition (+) at /var/www/imscp/engine/imscp-sw-mngr line 111