@@ -15,17 +15,17 @@ $ORIGIN {DOMAIN_NAME}.
 ns{NS_NUMBER}	IN	{NS_IP_TYPE}	{NS_IP}
 ; dmn NS A entry ENDING
 www		IN	CNAME	@
-ftp 	IN	CNAME	@
+ftp 	IN	A	{DOMAIN_IP}
 ; dmn MAIL entry BEGIN
 @		IN 	MX	10	mail
 @		IN	TXT	"v=spf1 a mx -all"
 @		IN	SPF	"v=spf1 a mx -all"
 mail	IN	{BASE_SERVER_IP_TYPE}	{BASE_SERVER_IP}
-imap	IN	CNAME	mail
-pop		IN	CNAME	mail
-pop3	IN	CNAME	mail
-relay	IN	CNAME	mail
-smtp	IN	CNAME	mail
+imap	IN	{BASE_SERVER_IP_TYPE}	{BASE_SERVER_IP}
+pop		IN	{BASE_SERVER_IP_TYPE}	{BASE_SERVER_IP}
+pop3	IN	{BASE_SERVER_IP_TYPE}	{BASE_SERVER_IP}
+relay	IN	{BASE_SERVER_IP_TYPE}	{BASE_SERVER_IP}
+smtp	IN	{BASE_SERVER_IP_TYPE}	{BASE_SERVER_IP}
 ; dmn MAIL entry ENDING
 ; sub [{SUBDOMAIN_NAME}] entry BEGIN
 ; sub [{SUBDOMAIN_NAME}] entry ENDING
